Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81596

QDoc doesn't parse JSON files correctly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.0.0 RC
    • 5.14.0
    • Build tools: qdoc
    • None
    • 2
    • d54cfd5ade5c18ed66a1defa337ca3f6aea2ab1a (qt/qttools/dev) 02eed75d1661371fb76b496dfd08cbd198737b35 (qt/qttools/5.15)
    • Da Vinci - sprint 21

    Description

      In the https://doc-snapshots.qt.io/qtivi/qtivi-ivicore-qface-tutorial-example.html, there are some links to JSON files.

      The JSON files are correct and are also accepted by Qt's plugin system as metadata.

      QDoc doesn't accept them and reports the following error:

      /home/gagi/work/qtas/qtivi/src/ivicore/doc/src/examples-qface-tutorial.qdoc:479: (qdoc) warning: examples-qface-tutorial.qdocUnable to parse JavaScript: "Expected token `,'" at line 2, column 10

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            treinio Topi Reiniƶ
            gagi Dominik Holland
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes