qdoc: Handle JSON as plain text

The JavaScript code marker failed to handle JSON snippets; drop
the advertised support for it, parsing JSON as plain text.
This is OK as there's typically no types to link to or
highlighting needed for JSON data.

Fixes: QTBUG-81596
Change-Id: I004fcbe97a66ff5a33c4c443a24d16107aacb4c8
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit d54cfd5ade5c18ed66a1defa337ca3f6aea2ab1a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>